feat: adding swagger for update user endpoint
